samples/_failures_safe/1761346292_8bd938_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4ba4454.c: In function ‘main’:
./samples/SAFE/__tmp_d4ba4454.c:174:5: error: expected expression at end of input
  174 |     if (fgets(input, sizeof(input),
      |     ^~
./samples/SAFE/__tmp_d4ba4454.c:174:5: error: expected declaration or statement at end of input
